--- a/docs/deployment_guide/partner_editable/overview.adoc
+++ b/docs/deployment_guide/partner_editable/overview.adoc
@@ -1,9 +1,8 @@
-This guide covers the information you need to deploy the {partner-product-name} Partner Solution in the AWS Cloud.
+This guide covers the information you need to deploy Amazon Relational Database Service (Amazon RDS) in the AWS Cloud.
 
-// Fill in the info in <angle brackets> for use on the landing page only: 
-This Amazon Web Services (AWS) Partner Solution deploys [<product name>](<partner's marketing product page>) in the AWS Cloud so that <purpose>. This solution is for <target users> who want to <do what> so that <why>. For more information, refer to the [<product name> documentation](<URL>).
+The solution deploys a {partner-product-short-name} cluster in a private subnet with an Amazon RDS read replica in one Availability Zone and a write replica in another zone. Native replication mechanisms available with the database engine keep the read replica in sync with the source database. The deployment also includes access to Amazon CloudWatch metrics and logs, event notifications, and data encryption. 
 
-// Deploying this solution does not guarantee an organization’s compliance with any laws, certifications, policies, or other regulations. [Uncomment this statement only for solutions that relate to compliance. We'll add the corresponding reference part to the landing page and get legal approval before publishing.]
+// {partner-product-short-name} is a collection of managed services that helps you set up, operate, and scale databases in the cloud. {database-engine} combines the speed and reliability of high-end commercial databases with the simplicity and cost-effectiveness of open-source databases. You can use {partner-product-short-name} with the the code, tools, and applications you use today with your existing {database-engine} databases. If you aren't familiar with {service-short-name}, refer to https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Welcome.html[What is Amazon Relational Database Service (Amazon RDS)?^]
 
 // For advanced information about the product, troubleshooting, or additional functionality, refer to the https://{partner-solution-github-org}.github.io/{partner-solution-project-name}/operational/index.html[Operational Guide^].
 
